Add Richard Klees (@klees / @lechimp-p) to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,5 @@ libtree is written and maintained by Fabian Kochem.
 
 Contributors:
 
-James Hutchby
+James Hutchby (GH: jameshy)
+Richard Klees (GH: klees / lechimp-p)
