--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+5.0.1
+-----
+* [FIX] Fix bug where one couldn't switch from read-only to read-write
+  in the same connection.
+
 5.0.0
 -----
 * [BREAKING] Remove Transaction class and replace it by ReadOnlyTransaction
