--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+5.1.0
+-----
+* [FEATURE] Add Node.update_properties()
+
 5.0.1
 -----
 * [FIX] Fix bug where one couldn't switch from read-only to read-write
