Make ancestor node accessors return bottom-up ordered lists
Node.ancestors and core.query.get_ancestors(sort=True) are affected.
Not affected is core.query.get_ancestor_ids(), which still returns
an unsorted set.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+6.0.0
+-----
+* [BREAKING] Node.ancestors and core.query.get_ancestors() now return
+  type list instead of set. The resulting list is ordered bottom-up.
+
 5.2.0
 -----
 * [FEATURE] Add Node.recursive_properties, which contains the recursively
